CHANGES to BioNetGen
updated 23 October 2018
https://github.com/RuleWorld/bionetgen/

== BioNetGen-2.4.0 ==

==== New Features ====
* Heterogeneous adaptive scaling method is implemented
* Support for exporting multi state and multi component SBML files added

==== Minor changes ===
* Reworked the build process and added instructions

==== Bug Fixes ====
* Small change to <big><tt>Expression::getName()</tt></big> to not create a new local function if the rate law already starts with the <big><tt>_rateLaw</tt></big> prefix. This prevents BNG from continually making new functions every time a model is read back in.
* Fixed a bug with reactants or the products that are just "0" not being correctly written in the reactions block of output .net files.

== BioNetGen-2.3.1 ==

== BioNetGen-2.3.0 ==

==== New Features ====
* Show graph automorphisms and statistical factor calculations for rules and reactions: BNG2.pl model.bngl --write_autos (or) BNG2.pl model.bngl --autos

==== SBML-to-BNGL Translator ====
* Atomizer will now query BioGrid and PathWay commons when determining the active or binding site in a complex. Include the 'pathwaycommons' flag during model import to active this option
* Several bugfixes to the lexical analysis engine
* The SBML-to-BNGL translator was moved to its own repository@https://github.com/RuleWorld/atomizer. The Atomizer source code can also be found in the XXX directory within the BioNetGen distribution

==== Visualization ====
* New styles for visualization.
* Updates to visualization algorithms.
* Supported types: conventional, compact, regulatory, opts, contactmap, reaction_network.
* Supported regulatory graph options: background, opts, groups, collapse, ruleNames, doNotUseContextWhenGrouping, doNotCollapseEdges.

==== Minor changes ===
* BioNetGen will now automatically run the generate_network command if one of simulate_pla/simulate_ode/simulate_ssa methods are called and a network wasn't loaded into the system otherwise