@@ -1,6 +1,16 @@
 CHANGES to BioNetGen
-updated 23 October 2018
+updated 3 April 2019
 https://github.com/RuleWorld/bionetgen/
+
+== BioNetGen-2.5.0==
+'''''Release date TBD'''''
+
+=== New Features ===
+* Added a new built-in function <big><tt>mratio(a,b,z)</tt></big> that calculates the ratio of Kummer hypergeometric functions M(a+1,b+1,z)/M(a,b,z) to within a small tolerance. The function can be used in both the <big><tt>parameters</tt></big> and <big><tt>functions</tt></big> blocks and is useful for calculating the mean and variance of the steady-state number of C molecules in the simple kinetic scheme A + B <-> C. See [https://en.wikipedia.org/wiki/Confluent_hypergeometric_function] for further details.
+
+=== Minor Changes ===
+
+=== Bug Fixes ===
 
 == BioNetGen-2.4.0 ==
 
